    - (syndie.gui branch) enable the page context menus
    - (syndie.gui branch) body bgcolor and bgimage (tiled), and refactor the
      PageRender's DBClient dependency into a PageRendererSource for easy
      rendering of pages not in the database
    - (syndie.gui branch) stubs for the wysiwyg editor, and refactor the system
      colors out into a shared component

* 2006-10-22  0.917b released
    - add hooks for scripts to be run on syndie startup and login, as well as
      a set of default preferences and aliases to be injected when a new local
      syndie nym is created.  the scripts are in the "startup" and "login"
      files in "$rootDir/scripts/".  the preferences and aliases are name=value
      pairs in that same directory in the "defaultprefs" and "defaultaliases"
      files.
    - ship with default preferences and aliases to set the default archive for
      new users to http://syndie.i2p.net/archive/, and includes a "sync"
      alias to both pull and push any changes to it.  this does not affect
      existing syndie logins, and does not overwrite existing scripts
    - keep track of old channel read keys so that we can decrypt messages that
      used them later on, but don't use them to encrypt any new messages.
      later, we can do some pruning to remove keys long ago deprecated
    - upgrade to HSQLDB 1.8.0.7
    - include an index.html in the archive directory that, by default,
      simply explains briefly what the archive is and disclaims responsability
      for the content in it.  archive operators can customize the file as they
      see fit by editing "$rootDir/archive/index.html".  That index will of
      course be visible to anyone viewing the archive on the web, and it is
      also published inside freenet archives (as are any other html files)
    - more aggressively clean up temporary files on syndie shutdown
    - fixed a regression where fetched passphrase encrypted posts did not